--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,8 @@
 	<parent>
 		<groupId>cn.wuxia.parent</groupId>
 		<artifactId>parent2017</artifactId>
-		<version>1.4.1</version>
+		<version>1.5.2</version>
+		<relativePath>../wuxia-parent</relativePath>
 	</parent>
 	<artifactId>wuxia-epay</artifactId>
 	<name>WUXIA ePay</name>
