--- a/pom.xml
+++ b/pom.xml
@@ -5,20 +5,22 @@
 	<parent>
 		<groupId>cn.wuxia.parent</groupId>
 		<artifactId>parent2018</artifactId>
-		<version>2.0.0</version>
+		<version>2.1.0</version>
 		<relativePath>../wuxia-parent</relativePath>
 	</parent>
 	<artifactId>wuxia-epay</artifactId>
 	<name>WUXIA ePay</name>
-
+	<version>2.1.1-SNAPSHOT</version>
 	<description>WUXIA Payment Project</description>
+	<url>https://github.com/wuxiatech/wuxia-epay</url>
 	<properties>
+		<wuxia-common.version>2.1.1-SNAPSHOT</wuxia-common.version>
 	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>cn.wuxia.common</groupId>
 			<artifactId>wuxia-common</artifactId>
-			<version>${project.parent.version}</version>
+			<version>${wuxia-common.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<!-- Spring -->
@@ -102,9 +104,9 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
-			<groupId>com.alipay</groupId>
+			<groupId>com.alipay.sdk</groupId>
 			<artifactId>alipay-sdk-java</artifactId>
-			<version>20170324180803</version>
+			<version>3.3.49.ALL</version>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
