--- a/pom.xml
+++ b/pom.xml
@@ -10,17 +10,24 @@
 	</parent>
 	<artifactId>wuxia-epay</artifactId>
 	<name>WUXIA ePay</name>
-	<version>2.1.1-SNAPSHOT</version>
+	<version>2.2.1-SNAPSHOT</version>
 	<description>WUXIA Payment Project</description>
 	<url>https://github.com/wuxiatech/wuxia-epay</url>
 	<properties>
-		<wuxia-common.version>2.1.1-SNAPSHOT</wuxia-common.version>
+		<wuxia-common.version>2.2.1-SNAPSHOT</wuxia-common.version>
+		<wuxia-orm-hibernate.version>2.2.1-SNAPSHOT</wuxia-orm-hibernate.version>
 	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>cn.wuxia.common</groupId>
 			<artifactId>wuxia-common</artifactId>
 			<version>${wuxia-common.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>cn.wuxia.common</groupId>
+			<artifactId>wuxia-orm-hibernate5</artifactId>
+			<version>${wuxia-orm-hibernate.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<!-- Spring -->
@@ -92,11 +99,6 @@
 			<artifactId>jul-to-slf4j</artifactId>
 		</dependency>
 		<!-- LOGGING end -->
-		<dependency>
-			<groupId>org.jdom</groupId>
-			<artifactId>jdom2</artifactId>
-			<optional>true</optional>
-		</dependency>
 		<dependency>
 			<groupId>com.chinapay.netpay</groupId>
 			<artifactId>netpayclient</artifactId>
