--- a/pom.xml
+++ b/pom.xml
@@ -5,17 +5,17 @@
 	<parent>
 		<groupId>cn.wuxia.parent</groupId>
 		<artifactId>parent2018</artifactId>
-		<version>2.1.0</version>
+		<version>2.1.1</version>
 		<relativePath>../wuxia-parent</relativePath>
 	</parent>
 	<artifactId>wuxia-epay</artifactId>
 	<name>WUXIA ePay</name>
-	<version>2.2.1-SNAPSHOT</version>
+	<version>2.2.1</version>
 	<description>WUXIA Payment Project</description>
 	<url>https://github.com/wuxiatech/wuxia-epay</url>
 	<properties>
-		<wuxia-common.version>2.2.1-SNAPSHOT</wuxia-common.version>
-		<wuxia-orm-hibernate.version>2.2.1-SNAPSHOT</wuxia-orm-hibernate.version>
+		<wuxia-common.version>2.2.1</wuxia-common.version>
+		<wuxia-orm-hibernate.version>2.2.1</wuxia-orm-hibernate.version>
 	</properties>
 	<dependencies>
 		<dependency>
