--- a/pom.xml
+++ b/pom.xml
@@ -5,18 +5,18 @@
 	<parent>
 		<groupId>cn.wuxia.parent</groupId>
 		<artifactId>parent2019</artifactId>
-		<version>2.3.0</version>
+		<version>2.3.1</version>
 		<relativePath>../wuxia-parent</relativePath>
 	</parent>
 	<groupId>cn.wuxia.component</groupId>
 	<artifactId>wuxia-component-epay</artifactId>
 	<name>WUXIA ePay Component</name>
-	<version>2.3.0-SNAPSHOT</version>
+	<version>2.3.1</version>
 	<description>WUXIA Payment Component Project</description>
 	<url>https://github.com/wuxiatech/wuxia-epay</url>
 	<properties>
-		<wuxia-common.version>2.3.0-SNAPSHOT</wuxia-common.version>
-		<wuxia-orm-hibernate.version>2.3.0-SNAPSHOT</wuxia-orm-hibernate.version>
+		<wuxia-common.version>2.3.1</wuxia-common.version>
+		<wuxia-orm-hibernate.version>2.3.1</wuxia-orm-hibernate.version>
 	</properties>
 	<dependencies>
 		<dependency>
