--- a/pom.xml
+++ b/pom.xml
@@ -5,31 +5,28 @@
 	<parent>
 		<groupId>cn.wuxia.parent</groupId>
 		<artifactId>parent2019</artifactId>
-		<version>2.3.2</version>
-		<relativePath>../wuxia-parent</relativePath>
+		<version>2.3.3</version>
 	</parent>
 	<groupId>cn.wuxia.component</groupId>
 	<artifactId>wuxia.epay-component</artifactId>
 	<name>WUXIA ePay Component</name>
-	<version>2.3.2</version>
+	<version>${project.parent.version}</version>
 	<description>WUXIA Payment Component Project</description>
 	<url>https://github.com/wuxiatech/wuxia-epay</url>
 	<properties>
-		<wuxia-common.version>2.3.2</wuxia-common.version>
-		<wuxia-orm-hibernate.version>2.3.2</wuxia-orm-hibernate.version>
+		<wuxia-common.version>${project.parent.version}</wuxia-common.version>
+		<wuxia-orm-hibernate.version>${project.parent.version}</wuxia-orm-hibernate.version>
 	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>cn.wuxia.common</groupId>
 			<artifactId>wuxia.common</artifactId>
 			<version>${wuxia-common.version}</version>
-			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>cn.wuxia.common</groupId>
 			<artifactId>wuxia.hibernate5-orm</artifactId>
 			<version>${wuxia-orm-hibernate.version}</version>
-			<scope>provided</scope>
 		</dependency>
 		<!-- Spring -->
 		<dependency>
